--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -49,8 +49,8 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true
-      - run: gem install bundler gem
+          bundler-cache: false
+      - run: gem update bundler
       - run: bundle update
       - run:  JRUBY_OPTS="--debug" bundle exec rspec
   rspec-truffleruby:
